# multi-modal-emotion-recognition

./: .gitignore  README.md  bbox_converter.py  check.py  cremad_bbox_converter.py  cremad_extract_bboxes.py  cremad_video_to_audio_converter.py  docker-compose.dev.yml  docker-compose.yml  extract_bboxes.py  main.py  nginx.conf  pyproject.toml  ravdess_bbox_converter.py  ravdess_extract_bboxes.py  ravdess_video_to_audio_converter.py  ravdess_voice_extractor.py  requirements.txt  result.txt  test.py  train.py  train2.py  video-to-audio-converter.py  video_extractor.py  voice_extractor.py
audio_features/: 1001_DFA_ANG_XX_voice_mp4_features.npy  1001_DFA_DIS_XX_voice_mp4_features.npy  1001_DFA_FEA_XX_voice_mp4_features.npy  1001_DFA_HAP_XX_voice_mp4_features.npy  1001_DFA_NEU_XX_voice_mp4_features.npy  1001_DFA_SAD_XX_voice_mp4_features.npy  1001_IEO_ANG_HI_voice_mp4_features.npy  1001_IEO_ANG_LO_voice_mp4_features.npy  1001_IEO_ANG_MD_voice_mp4_features.npy  1001_IEO_DIS_HI_voice_mp4_features.npy  1001_IEO_DIS_LO_voice_mp4_features.npy  1001_IEO_DIS_MD_voice_mp4_features.npy  1001_IEO_FEA_HI_voice_mp4_features.npy  1001_IEO_FEA_LO_voice_mp4_features.npy  1001_IEO_FEA_MD_voice_mp4_features.npy  1001_IEO_HAP_HI_voice_mp4_features.npy  1001_IEO_HAP_LO_voice_mp4_features.npy  1001_IEO_HAP_MD_voice_mp4_features.npy  1001_IEO_NEU_XX_voice_mp4_features.npy  1001_IEO_SAD_HI_voice_mp4_features.npy  1001_IEO_SAD_LO_voice_mp4_features.npy  1001_IEO_SAD_MD_voice_mp4_features.npy  1001_IOM_ANG_XX_voice_mp4_features.npy  1001_IOM_DIS_XX_voice_mp4_features.npy  (+8858 more)
back-end/: .dockerignore  (+5 more)
(+8944 files in other folders)
