[project]
name = "multi-modal-emotion-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.11.0.86",
    "ultralytics>=8.3.230",
]

[tool.uv.workspace]
members = [
    "multi-modal-emotion-recognition",
]
